<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/upSection"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="wrap_content"
            android:minWidth="500dp"
            android:minHeight="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/obraz"
            android:layout_gravity="top"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1000"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:layout_gravity="center"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/engTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/engTitle"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:layout_marginTop="12dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/numberOfVotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numberOfVotes"
                    android:layout_marginTop="12dp"
                    android:textSize="16sp" />



                <TextView
                    android:id="@+id/duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:layout_marginTop="12dp"
                    android:textSize="16sp" />



            </LinearLayout>

            <ImageView
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:src="@drawable/add"
                android:layout_margin="5dp"
                android:id="@+id/addOrRemove"
                android:layout_gravity="top"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/downSection"
            android:layout_weight="2"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/originalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/engTitle"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/countries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/premiere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/premieraPl"
                android:layout_marginTop="12dp"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="12dp"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="12dp"
                android:textSize="16sp" >
            </TextView>

            <TextView
                android:id="@+id/actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="12dp"
                android:textSize="16sp" >
            </TextView>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/show_review"/>




        </LinearLayout>


    </LinearLayout>
</ScrollView>